--- a/WebContent/dashboard.xhtml
+++ b/WebContent/dashboard.xhtml
@@ -11,49 +11,92 @@
 <h:body>
 	<p:layout fullPage="true" style="height:100%; width:100%">
 		<p:layoutUnit position="center" style="height: 100%; width:100%">
-			<h:panelGrid style="width:100%; height:2%">
-				<p:row>
-					<p:column>
-						<h6>
+			<table style="width: 100%; height: 2%">
+				<tr>
+					<td style="padding-top: 15px" align="left">
+						<h4>
 							<h:outputText value="Welcome : " />
 							<h:outputText value="#{user.username}" />
-						</h6>
-					</p:column>
-				</p:row>
-			</h:panelGrid>
-			<p:tabView id="tabView" style="height: 100%; width:100%">
+						</h4>
+					</td>
+					<td align="right"><p:commandButton action="#{user.logout}"
+							value="SignOut" ajax="true"></p:commandButton></td>
+				</tr>
+			</table>
+			<p:tabView id="tabView" style="height: 80%; width:100%">
 
 				<p:tab id="tba1" title="Order Details" style="height: 100%;">
-					<p:dataTable colspan="2" style="height: 100%; width:100%">
-						<p:column headerText="Order" />
-						<p:column headerText="Order Date" />
-						<p:column headerText="Amount" />
-					</p:dataTable>
+					<h:form>
+
+						<p:dataTable colspan="2" style="height: 100%; width:100%"
+							var="order" value="#{dashboard.orderList}"
+							selection="#{dashboard.selectedOrder}" selectionMode="single"
+							paginator="true" rows="10">
+							<p:column headerText="Order" sortBy="order" filterBy="order"
+								id="order">#{order.ordernum}</p:column>
+							<p:column headerText="Order Date" sortBy="orderdate"
+								filterBy="orderdate" id="orderdate">#{order.date}</p:column>
+							<p:column headerText="Amount" sortBy="orderamt"
+								filterBy="orderamt" id="orderamt">#{order.total}</p:column>
+						</p:dataTable>
+
+						<p:dialog header="Order Detail" widgetVar="orderDialog"
+							resizable="false" width="500">
+							<h:panelGrid id="display" columns="2" cellpadding="4">
+								<h:outputText value="Order Num:" />
+								<h:outputText value="#{dashboard.selectedOrder.ordernum}"
+									id="order" />
+
+								<h:outputText value="Order Date:" />
+								<h:outputText value="#{dashboard.selectedOrder.date}" id="date" />
+
+								<h:outputText value="Product:" />
+								<h:outputText value="#{dashboard.selectedOrder.prodid}"
+									id="product" />
+								<h:outputText value="Quantity:" />
+								<h:outputText value="#{dashboard.selectedOrder.quantity}"
+									id="quantity" />
+
+								<h:outputText value="Amount" />
+								<h:outputText value="#{dashboard.selectedOrder.total}"
+									id="total" />
+
+								<h:outputText value="Salesman" />
+								<h:outputText value="#{dashboard.selectedOrder.salesman}"
+									id="total" />
+							</h:panelGrid>
+						</p:dialog>
+					</h:form>
 				</p:tab>
 
 				<p:tab id="tab2" title="Order Product">
-				<h:form id="orderForm">
-					<h:panelGrid columns="2" style="height: 40%;width: 50%">
-						<h:outputText value="Product : " />
-						<p:selectOneMenu id="combo" value="#{product.product}"
-							style="width: 210px">
-							<f:ajax listener="#{product.setProductRate}" execute="combo"
-								render="rate" />
-							<f:selectItems value="#{product.list}" />
-						</p:selectOneMenu>
-						<h:outputText value="Rate : " />
-						<p:inputText id="rate" value="#{product.rate}" disabled="true"
-							style="width: 210px"></p:inputText>
-						<h:outputText value="Quantity : " />
-						<p:spinner id="spin" min="1" max="1000" style="width: 210px">
-							<f:ajax listener="#{product.setTotalRate}" execute="spin"
-								render="total" />
-						</p:spinner>
-						<h:outputText value="Total Value : " />
-						<p:inputText id="total" disabled="true" style="width: 210px"></p:inputText>
-						<p:commandButton action="#{user.placeOrder}" value="Order"
-							update="orderForm" ajax="true"></p:commandButton>
-					</h:panelGrid>
+					<h:form id="orderForm">
+						<h:panelGrid columns="2" style="height: 40%;width: 50%">
+							<h:outputText value="Product : " />
+							<p:selectOneMenu id="combo" value="#{order.prodid}"
+								style="width: 210px">
+								<f:ajax listener="#{order.setProductRate}" execute="combo"
+									render="rate" />
+								<f:ajax listener="#{order.setTotalRate}" execute="combo"
+									render="total" />
+								<f:selectItems value="#{order.list}" />
+							</p:selectOneMenu>
+							<h:outputText value="Rate : " />
+							<p:inputText id="rate" value="#{order.rate}" disabled="true"
+								style="width: 210px"></p:inputText>
+							<h:outputText value="Quantity : " />
+							<p:spinner id="spin" min="1" max="1000" style="width: 210px"
+								value="#{order.quantity}">
+								<f:ajax listener="#{order.setTotalRate}" execute="spin"
+									render="total" />
+							</p:spinner>
+							<h:outputText value="Total Value : " />
+							<p:inputText id="total" disabled="true" style="width: 210px"
+								value="#{order.total}"></p:inputText>
+							<p:commandButton action="#{order.placeOrder}" value="Order"
+								update="orderForm" ajax="true"></p:commandButton>
+							<p:growl sticky="true" />
+						</h:panelGrid>
 					</h:form>
 				</p:tab>
 			</p:tabView>
