--- a/WebContent/chart.xhtml
+++ b/WebContent/chart.xhtml
@@ -15,19 +15,23 @@
 			<ui:include src="include.xhtml" />
 			<p:panel style="height: 90%;width: 99%" header="Report">
 				<h:form id="reportForm" style="height:90%; width:100%;">
-					<table style="width: 100%; padding-top: 50px">
-						<tr style="width: 100%">
-						<td style="width: 2%;"><div style="width: 10%;">
+					<table style="width: 100%; height: 100%; padding-top: 50px">
+						<tr style="width: 100%;">
+							<td style="width: 10%;height: 90%"><div
+									style="width: 15%; height: 90%">
 									<p:commandButton action="#{report1.loadReport}"
-										icon="ui-icon-carat-1-w" ajax="true">
+										style="width: 100%; height: 100%" icon="ui-icon-carat-1-w"
+										ajax="true">
 									</p:commandButton>
 								</div></td>
-							<td style="width: 30%"><p:bubbleChart id="bubbleChart"
-									value="#{bubbleChartBean.model}" style="width:100%"
-									xaxisLabel="Total Value" yaxisLabel="Quantity" /></td>
-							<td style="width: 30%"><p:pieChart id="pieChart"
-									value="#{pieChartBean.model}" style="width:100%"
-									legendPosition="w" fill="false" sliceMargin="5" /></td>
+							<td style="width: 45%; height: 100%"><p:bubbleChart
+									id="bubbleChart" value="#{bubbleChartBean.model}"
+									style="width:100%;height: 100%" xaxisLabel="Total Value"
+									yaxisLabel="Quantity" /></td>
+							<td style="width: 45%; height: 100%"><p:pieChart
+									id="pieChart" value="#{pieChartBean.model}"
+									style="width:100%;height: 100%" legendPosition="w" fill="false"
+									sliceMargin="5" /></td>
 						</tr>
 					</table>
 				</h:form>
