--- a/WebContent/report.xhtml
+++ b/WebContent/report.xhtml
@@ -33,7 +33,7 @@
 					</table>
 					<table style="width: 100%; padding-top: 5px">
 						<tr style="width: 100%">
-							<td style="width: 95%"><p:dataTable rows="15"
+							<td style="width: 97%"><p:dataTable rows="15"
 									paginator="true" var="orders"
 									value="#{searchGridBean.orderList}">
 									<p:column headerText="Product" id="prodid">#{orders.prodid}</p:column>
@@ -41,8 +41,8 @@
 									<p:column headerText="Quantity" id="quantity">#{orders.quantity}</p:column>
 									<p:column headerText="Total Value" id="total">#{orders.total}</p:column>
 								</p:dataTable></td>
-							<td style="width: 10%;"><div style="width: 10%;">
-									<p:commandButton action="#{report1.loadChart}"
+							<td style="height: 100%"><div style=" width: 50%; height: 100%">
+									<p:commandButton action="#{report1.loadChart}" style="width: 100%; height: 100%"
 										icon="ui-icon-carat-1-e" ajax="true">
 										<f:actionListener binding="#{bubbleChartBean.refreshChart()}" />
 										<f:actionListener binding="#{pieChartBean.refreshChart()}" />
